[project]
name = "alchimie"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "dagster",
    "dagster-k8s",
    "psycopg2-binary>=2.9.9",
    "polars>=0.20.10",
]

[project.optional-dependencies]
dev = [
    "dagster-webserver",
    "pytest",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "alchimie.definitions"
code_location_name = "alchimie"

[tool.setuptools.packages.find]
exclude=["alchimie_tests"]
